chore: add get character of api
